--- a/estilo.css
+++ b/estilo.css
@@ -13,3 +13,9 @@ h1
 {
     background-color: lightgreen;
 }
+
+body
+{
+    background-image: url("../imagem/fundo.jpg");
+    background-size: auto;
+}
